<resources>
    <string name="app_name">GentleBegins</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login\n</string>
    <string name="click_to_register">Click to register</string>
    <string name="feed_b">Feeding</string>
    <string name="record_r">Record Routines</string>
    <string name="sleep_b">Sleeping</string>
    <string name="diaper_b">Diaper</string>
    <string name="medicine_b">Medicine</string>
    <string name="summary_b">Check Summary</string>
    <string name="feeding_r">Feeding Record</string>
    <string name="milk_feed">Milk Feeding</string>
    <string name="solid_food">Solid Food</string>
    <string name="diaper_r">Diaper Tracker</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="diaper_status">Diaper Status: </string>
    <string name="diaper_status1"> Wet </string>
    <string name="diaper_status2"> Dry </string>
    <string name="diaper_Notes"> Additional Notes:  </string>
    <string name="save"> Save </string>
    <string name="milkfeed_r">Milk Feeding Record</string>
    <string name="milktype">Type of Milk</string>
    <string name="milkamount">Amount </string>
    <string name="food_type">Type of Food </string>
    <string name="food_notes">Notes </string>
    <string name="sleep_record">Sleeping Tracker</string>
    <string name="sleep_duration">Duration (in Minutes)</string>
    <string name="sleep_timeStart">Time Start</string>
    <string name="sleep_timeEnd">Time End</string>
    <string name="sleep_Mode">Sleep Mode</string>
    <string name="medicine_record">Medicine Tracker</string>
    <string name="symptoms">Symptoms</string>

    <string name="type_medicine">Type of Medicine</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No Reminders Set\nClick + to add the reminders</string>
    <string name="popup_save">Save</string>
    <string name="popup_title">Title</string>
    <string name="popup_select">Select</string>
    <string name="date_n_time">Date and Time</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="select_date_time">Select date and time</string>
    <string name="homepage">Home Page</string>
    <string name="profile_pic">"Profile "</string>
    <string name="welcome">Welcome Back</string>
    <string name="allUserButton">User</string>
    <string name="addTipsButton">Additional Tips</string>
    <string name="AdditionalTips">Additional Tips</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="link">URL Link</string>
    <string name="addTipsPic">Click to upload image</string>
    <string name="SaveAddTips">Save</string>
    <string name="Back">Back</string>
    <string name="personalinfo">Personal Information</string>
    <string name="ParentsName">Parent\'s name</string>
    <string name="BabysName">Baby\'s name</string>
    <string name="BabysGender">Baby\'s gender</string>
    <string name="BabysBirthday">Baby\'s Birthday</string>
    <string name="Relationship">Relationship to the baby</string>
    <string name="PersonalinfoDone">Save</string>
    <string name="usersdetils">User Details</string>
    <string name="admin">Admin</string>
    <string name="userdetails">User Details</string>
    <string name="additionaltips">Additional Tips</string>
    <string name="addtips">Add additional tips</string>

    <string name="date_format">Date:</string>
    <string name="time_format">Time: </string>
    <string name="diaper_notes_format">Diaper Notes: </string>
    <string name="diaper_status_format">Diaper Status: </string>
    <string name="placeholder">N/A</string>

    <string name="date_placeholder">%s</string>
    <string name="time_placeholder">%s</string>
    <string name="diaper_notes_placeholder">%s</string>
    <string name="diaper_status_placeholder">%s</string>


    <string-array name="milk_type">
        <item>Breast Milk</item>
        <item>Formula Milk</item>
    </string-array>

    <string-array name="milk_amount">
        <item>ml</item>
        <item>oz</item>
    </string-array>

    <string-array name="sleep_mode">
        <item>Nap</item>
        <item>Light Sleep</item>
        <item>Deep Sleep</item>
    </string-array>

    <string-array name="BabysGender">
        <item>Boy</item>
        <item>Girl</item>
    </string-array>

    <string name="title_activity_summary_page">Summary_page</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="recorddetails">Record Details</string>
    <string name="adminfeeding">Feeding</string>
    <string name="adminsleeping">Sleeping</string>
    <string name="admindiaper">Diaper</string>
    <string name="adminmedicine">Medicine</string>
    <string name="addadditionaltips">Add Additional Tips</string>
    <string name="upload_image">Upload Image</string>

    <string name="profile_page_title">Baby Profile</string>
    <string name="message">Message</string>
    <string name="loading">Loading...</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_topic_name">Enter topic name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_language">Enter language</string>
    <string name="desc">desc</string>
    <string name="medicdesc">Description:</string>
    <string name="priority">priority</string>
    <string name="upload_task">Add Task</string>
    <string name="done_task">Done Task</string>
    <string name="uploadtipspic">UploadTipsPic</string>
    <string name="back_to_add_tips_page">Back to Add Tips page</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="EditAddTips">Update</string>
    <string name="update">Update</string>
    <string name="relationship">Relationship:</string>
    <string name="baby_s_birthday">Baby\'s birthday</string>
    <string name="baby_s_name">Baby\'s name:</string>
    <string name="baby_s_gender">Baby\'s gender:</string>
    <string name="unit">Unit:</string>
    <string name="minutes">minutes</string>
    <string name="profile">Profile page</string>
    <string name="addgallery">Add Gallery</string>
    <string name="backtohomepage">backTOhomepage</string>


    <string name="itemMilkType">Milk Type :</string>
    <string name="itemMilkAmount">Amount :</string>
    <string name="itemMilkUnit">Milk Unit :</string>
    <string name="itemMilkDate">Milk Date :</string>
    <string name="itemMilkTime">Milk Time :</string>

        <string name="parent_name_format">Parent Name: %s</string>
        <string name="baby_name_format">Baby Name: %s</string>
        <string name="relationship_format">Relationship: %s</string>
        <string name="dob_format">Date of Birth: %s</string>
        <string name="gender_format">Gender: %s</string>



</resources>




