<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recSymptom"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/symptoms"
            android:textColor="#1976D2"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/recMedicine"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recSymptom"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:text="@string/desc"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recAmount"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recMedicine"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/milkamount"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recDate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recAmount"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/date"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recTime"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recDate"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:maxLines="1"
            android:text="@string/time"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>