<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recSleepMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/sleep_Mode"
            android:textColor="#1976D2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recDuration"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recSleepMode"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/sleep_duration"
            android:textColor="#5C6BC0"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/recUnit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recSleepMode"
            android:layout_marginStart="80dp"
            android:maxLines="1"
            android:text="@string/minutes"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recStart"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recDuration"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/sleep_timeStart"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recEnd"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/recStart"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:maxLines="1"
            android:text="@string/sleep_timeEnd"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>

