<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemMilkCard"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/itemMilkType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/itemMilkType"
            android:textColor="#1976D2"
            android:textSize="14sp" />


        <TextView

            android:id="@+id/itemAmount"
            android:layout_width="60dp"
            android:layout_below="@id/itemMilkType"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/itemMilkAmount"
            android:textColor="#5C6BC0"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />

        <TextView

            android:id="@+id/itemUnit"
            android:layout_width="140dp"
            android:layout_below="@id/itemMilkType"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:maxLines="1"
            android:text="@string/itemMilkUnit"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView

            android:id="@+id/itemDate"
            android:layout_width="140dp"
            android:layout_below="@id/itemAmount"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/itemMilkDate"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />

        <TextView

            android:id="@+id/itemTime"
            android:layout_width="140dp"
            android:layout_below="@id/itemDate"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:maxLines="1"
            android:text="@string/itemMilkTime"
            android:textColor="#5C6BC0"
            android:textSize="14sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>




