<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PersonalInformation">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="171dp"
        android:layout_height="88dp"
        android:layout_gravity="center"
        android:contentDescription="Gentle Begins Logo"
        app:srcCompat="@drawable/gentle_begins_logo"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:text="@string/personalinfo"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parentsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ParentsName"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Relationship"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/babysname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/BabysName"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/babygender_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dropdown"
            android:textSize="35sp"
            android:text="@string/BabysGender"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/babysbirthday"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="fill|left"
            android:text="@string/BabysBirthday"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="DuplicateIds,RtlHardcoded,TextContrastCheck,TextSizeCheck,TouchTargetSizeCheck,VisualLintButtonSize,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_personalinfoDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/PersonalinfoDone"
        android:background="@color/morandi_purple"
        tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>