<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".AdminUsersRecordFeeding">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="385dp"
        android:layout_height="89dp"
        android:background="@color/Thistle"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="15dp"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="Logout"
        android:src="@drawable/baseline_arrow_back_24"
        tools:ignore="HardcodedText,MissingConstraints"
        android:id="@+id/backTOuserprofilepage"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="25dp" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:contentDescription="GentleBeginsLogo"
        android:src="@drawable/gentle_begins_logo"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/admin"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="83dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="Logout"
        android:src="@drawable/baseline_logout_24"
        android:id="@+id/logoutButton"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorddetails"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="137dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/adminfeeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/DarkViolet"
        android:text="@string/adminfeeding"
        android:textColor="#CFD8DC"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="195dp" />

    <Button
        android:id="@+id/adminsleeping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/morandi_purple"
        android:text="@string/adminsleeping"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="195dp" />

    <Button
        android:id="@+id/admindiaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/morandi_purple"
        android:text="@string/admindiaper"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="195dp" />

    <Button
        android:id="@+id/adminmedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/morandi_purple"
        android:text="@string/adminmedicine"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="195dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/Thistle"
        app:menu="@menu/admin_bottom_nav"
        tools:ignore="VisualLintBottomNav" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="7dp"
            android:text="@string/userdetails"
            android:id="@+id/usersdetails"
            android:textColor="#424242"
            app:drawableTopCompat="@drawable/baseline_people_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="240dp"
            android:layout_marginBottom="7dp"
            android:text="@string/additionaltips"
            android:id="@+id/additionaltips"
            android:textColor="#424242"
            app:drawableTopCompat="@drawable/outline_tips_and_updates_24" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>